--- a/tools/devserver/views/index.ejs
+++ b/tools/devserver/views/index.ejs
@@ -1,9 +1,18 @@
 <!doctype html>
 <html>
     <head>
+
         <% for(var i=-1; ++i<vendorScripts.length;) { %>
-            <script type="text/javascript" data-main="assets/js/core/main" src="/assets/vendor/js/<%=vendorScripts[i]%>"></script>
+            <script type="text/javascript" src="/assets/vendor/js/<%=vendorScripts[i]%>"></script>
         <% } %>
+        <script>
+  	  require.config({
+  	  baseUrl: '/assets/js'
+		});
+		require(["core/main"], function (main) {
+
+		});
+ 	   </script>
     </head>
     <body>
         
