did stuff, I explained

--- a/tools/devserver/views/dev.ejs
+++ b/tools/devserver/views/dev.ejs
@@ -3,6 +3,8 @@
 <html>
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="/build/css/razorflow.css" />
+    <script type="text/javascript" src="/build/js/templates.js"></script>
         <% for(var i=-1; ++i<vendorScripts.length;) { %>
             <script type="text/javascript" src="/assets/vendor/js/<%=vendorScripts[i]%>"></script>
         <% } %>
