Added basic KPI Component

--- a/tools/devserver/views/dev.ejs
+++ b/tools/devserver/views/dev.ejs
@@ -16,13 +16,13 @@
             StandaloneDashboard(function (db) {
                 db.setDashboardTitle('KPI Types Supported in RazorFlow');
 
-//                var c1 = new KPIComponent();
+                var c1 = new KPIComponent();
 //                c1.setLocation(0, 0, 4, 4);
-//                c1.setCaption('Average Monthly Sales');
-//                c1.setValue(513.22, {
+                c1.setCaption('Average Monthly Sales');
+                c1.setValue(513.22);
 //                    numberPrefix: '$'
 //                });
-//                db.addComponent(c1);
+                db.addComponent(c1);
             });
         });
     </script>
