Made the component wrapper render the container

--- a/tools/devserver/views/dev.ejs
+++ b/tools/devserver/views/dev.ejs
@@ -23,6 +23,10 @@
 //                    numberPrefix: '$'
 //                });
                 db.addComponent(c1);
+
+                setTimeout(function () {
+                    c1.setValue(55);
+                }, 1000);
             });
         });
     </script>
