--- a/tools/devserver/views/dev.ejs
+++ b/tools/devserver/views/dev.ejs
@@ -17,7 +17,7 @@
                 db.setDashboardTitle('KPI Types Supported in RazorFlow');
 
                 var c1 = new KPIComponent();
-//                c1.setLocation(0, 0, 4, 4);
+                c1.setLocation(0, 0, 4, 4);
                 c1.setCaption('Average Monthly Sales');
                 c1.setValue(513.22);
 //                    numberPrefix: '$'
