Use percentages instead of pixels for l/w

--- a/tools/devserver/views/dev.ejs
+++ b/tools/devserver/views/dev.ejs
@@ -40,7 +40,7 @@
 
 </head>
 <body>
-<div id="dbTarget" style='position: relative;' class='rf rf-click rf-lg'>
+<div id="dbTarget" style='position: relative;width: 80%' class='rf rf-click rf-lg'>
 </div>
 </body>
 </html>
