Added media switching during resize and redraw

--- a/tools/devserver/views/dev.ejs
+++ b/tools/devserver/views/dev.ejs
@@ -18,7 +18,7 @@
 
                 var c1 = new KPIComponent();
                 c1.setDimensions(4, 4);
-                c1.setCaption('Average Monthly Sales');
+                c1.setCaption({md: 'Average Monthly Sales', sm: "Sales"});
                 c1.setValue(513.22);
 //                    numberPrefix: '$'
 //                });
