--- a/tools/devserver/views/dev.ejs
+++ b/tools/devserver/views/dev.ejs
@@ -17,7 +17,7 @@
                 db.setDashboardTitle('KPI Types Supported in RazorFlow');
 
                 var c1 = new KPIComponent();
-                c1.setDimensions(4, 4);
+                c1.setDimensions(3, 3);
                 c1.setCaption({md: 'Average Monthly Sales', sm: "Sales"});
                 c1.setValue(513.22);
 //                    numberPrefix: '$'
@@ -25,11 +25,21 @@
                 db.addComponent(c1);
 
                 var c2 = new KPIComponent();
-                c2.setDimensions(4, 4);
+                c2.setDimensions(3, 3);
                 c2.setCaption('Average Monthly Cost');
                 c2.setValue(345);
 
                 db.addComponent(c2);
+
+                var c3 = new TableComponent ();
+                c3.setDimensions (6, 6);
+                c3.setCaption ("table component");
+                c3.addColumn ("a", "Column A");
+                c3.addColumn ("b", "Column B");
+                c3.addRow ({a: 1, b: 2});
+                c3.addRow ({a: 3, b: 4});
+
+                db.addComponent(c3);
 
                 setTimeout(function () {
                     c1.setValue(55);
