Added a basic datasource

--- a/tools/devserver/views/dev.ejs
+++ b/tools/devserver/views/dev.ejs
@@ -43,7 +43,9 @@
 
                 setTimeout(function () {
                     c1.setValue(55);
-                }, 1000);
+
+                    c3.addRow ({a: 5, b: 6});
+                }, 1500);
             });
         });
     </script>
