--- a/tools/devserver/views/dev.ejs
+++ b/tools/devserver/views/dev.ejs
@@ -42,6 +42,19 @@
                 }
                 db.addComponent(c3);
 
+                var c4 = new ChartComponent();
+                c4.setDimensions(12, 6);
+                c4.setCaption('New Chart');
+                c4.setCaption('Yearly Sales for Top 5 Genres');
+                c4.setLabels(['2007', '2008', '2009', '2010', '2011']);
+                c4.addSeries('rock', 'Rock', [178.20, 155.43, 161.37, 157.41, 174.24], {numberPrefix: "$"});
+                c4.addSeries('latin', 'Latin', [82.17, 77.22, 80.19, 63.36, 79.20], {numberPrefix: "$"});
+                c4.addSeries('metal', 'Metal', [61.38, 53.46, 30.69, 80.39, 44.45], {numberPrefix: "$"});
+                c4.addSeries('blues', 'Blues', [62.37, 59.60, 45.54, 38.61, 5.94], {numberPrefix: "$"});
+                c4.addSeries('jazz', 'Jazz', [174.24, 79.20, 55.45, 55.44, 21.78], {numberPrefix: "$"});
+                c4.setYAxis('', {numberPrefix: '$'});
+                db.addComponent(c4);
+                
                 setTimeout(function () {
                     c1.setValue(55);
                     c1.unlock();
