Still doing chart component

--- a/tools/src/devserver/views/dev.ejs
+++ b/tools/src/devserver/views/dev.ejs
@@ -52,7 +52,7 @@
                 c4.addSeries('metal', 'Metal', [61.38, 53.46, 30.69, 80.39, 44.45], {numberPrefix: "$"});
                 c4.addSeries('blues', 'Blues', [62.37, 59.60, 45.54, 38.61, 5.94], {numberPrefix: "$"});
                 c4.addSeries('jazz', 'Jazz', [174.24, 79.20, 55.45, 55.44, 21.78], {numberPrefix: "$"});
-                c4.setYAxis('', {numberPrefix: '$'});
+                c4.setYAxis('hello', {numberPrefix: '$'});
                 db.addComponent(c4);
                 
                 setTimeout(function () {
