brought in spark in the kpi

--- a/tools/src/devserver/views/dev.ejs
+++ b/tools/src/devserver/views/dev.ejs
@@ -27,7 +27,7 @@
                 c2.setDimensions(3, 3);
                 c2.setCaption('Average Monthly Cost');
                 c2.setValue(345);
-                c2.setSparkValues([20, 10, 30, 40, 25], [20, 10, 30, 40, 25]);
+                c2.setSparkValues(['a', 'b', 'c', 'd', 'e'], [20, 10, 30, 40, 25]);
 
                 db.addComponent(c2);
 
