Added serialize components to the dashboard class

--- a/tools/src/devserver/views/dev.ejs
+++ b/tools/src/devserver/views/dev.ejs
@@ -77,6 +77,10 @@
 //                     // c3.clearRows();
 // //                    c3.addRow ({a: 5, b: 6});
 //                 }, 1500);
+//                 
+//                 
+
+                console.log(db.pro._serializeComponents());
             });
         });
     </script>
