Aninmating value in gauge

--- a/tools/src/devserver/views/dev.ejs
+++ b/tools/src/devserver/views/dev.ejs
@@ -25,7 +25,7 @@
                 var c2 = new GaugeComponent();
                 c2.setDimensions(12, 12);
                 c2.setCaption('Average Monthly Cost');
-                c2.setValue(45);
+                c2.setValue(90);
                 c2.setLimits(0, 100);
 
                 db.addComponent(c2);
@@ -71,12 +71,13 @@
                 //     debugger
                 // });
                 // db.addComponent(filter);
-//                 setTimeout(function () {
-//                     c1.setValue(55);
-//                     c1.unlock();
-//                     // c3.clearRows();
-// //                    c3.addRow ({a: 5, b: 6});
-//                 }, 1500);
+                setTimeout(function () {
+                    // c1.setValue(55);
+                    // c1.unlock();
+                    // c3.clearRows();
+//                    c3.addRow ({a: 5, b: 6}); 
+                    // c2.setValue(55);
+                }, 3000);
 //                 
 //                 
 
