Dev server demo files

--- a/tools/src/devserver/views/dev.ejs
+++ b/tools/src/devserver/views/dev.ejs
@@ -12,6 +12,8 @@
         require.config({
             baseUrl: '/assets/js'
         });
+    </script>
+    <script>
         require(["core/main"], function (rf) {
             StandaloneDashboard(function (db) {
                 db.setDashboardTitle('KPI Types Supported in RazorFlow');
