finished kpi resizing
Summary:
finished kpi resizing

correctred lint errors

Test Plan: no test plan

Reviewers: narendra, anirudh, ameen

Reviewed By: ameen

Differential Revision: http://forge.razorflow.com/D22

--- a/tools/src/devserver/views/dev.ejs
+++ b/tools/src/devserver/views/dev.ejs
@@ -22,6 +22,7 @@
                 c1.setDimensions(3, 3);
                 c1.setCaption({md: 'Average Monthly Sales', sm: "Sales"});
                 c1.setValue(513.22);
+                c1.setSparkValues(['a', 'b', 'c'], [500, 450, 600]);
                 db.addComponent(c1);
 
                 var c2 = new GaugeComponent();
