devserver: made the index list out all demos and testcases

--- a/tools/src/devserver/views/demo_index.ejs
+++ b/tools/src/devserver/views/demo_index.ejs
@@ -3,14 +3,14 @@
 <html>
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="/build/css/razorflow.css" />
 </head>
 <body>
 <div id="dbTarget" style='position: relative;width: 80%' class='rf rf-click rf-lg'>
 </div>
+<h3>Demos</h3>
 <ul>
     <% for(var i=0; i<files.length; i++) { %>
-        <li><a href="/demos/<%= files[i] %>"><%=files[i]%></a>
+        <li><a href="/demos/<%= files[i] %>"><%=files[i]%></a></li>
     <% } %>
 </ul>
 </body>
