Got zepto working

--- a/tools/src/devserver/views/demo.ejs
+++ b/tools/src/devserver/views/demo.ejs
@@ -18,7 +18,8 @@
                 baseUrl: '/assets/js',
                 paths: {
                     lodash: '/assets/vendor/js/lodash.min',
-                    jquery: '/assets/vendor/js/jquery.min',
+                    // jquery: '/assets/vendor/js/jquery.min',
+                    zepto: '/assets/vendor/js/zepto.min',
                     d3: '/assets/vendor/js/d3.rf',
                     Modernizr: '/assets/vendor/js/modernizr.rf',
                     spin: '/assets/vendor/js/spin'
@@ -27,7 +28,7 @@
                     lodash: {
                         exports: '_'
                     },
-                    jquery: {
+                    zepto: {
                         exports: '$'
                     },
                     Modernizr: {
