Custom lodash build using grunt-lodash

--- a/tools/src/devserver/views/demo.ejs
+++ b/tools/src/devserver/views/demo.ejs
@@ -17,7 +17,7 @@
             require.config({
                 baseUrl: '/assets/js',
                 paths: {
-                    lodash: '/assets/vendor/js/lodash.min',
+                    lodash: '/assets/vendor/js/lodash.rf.min',
                     zepto: '/assets/vendor/js/zepto.min',
                     d3: '/assets/vendor/js/d3.rf',
                     Modernizr: '/assets/vendor/js/modernizr.rf',
