--- a/fixture/templates/layout.ejs
+++ b/fixture/templates/layout.ejs
@@ -4,12 +4,15 @@
     <div class="row">
         <div class="col-md-4">
             <ul class="nav">
-                <%- render('nav.ejs', {items: tree.findAllClassNames()}) %>
+                <%- render('nav.ejs', {items: tree.findAllClassNames({access: 'public'})}) %>
             </ul>
         </div>
         <div class="col-md-8">
-            <% if(currentClass != 'index') { %>
-                <%- render('class.ejs', {tree: tree, item: tree.findNodeByClassName(currentClass)}) %>
+            <% 
+                var classNode = tree.findNodeByClassName(currentClass);
+                if(currentClass != 'index' && (classNode.access && classNode.access.name !== 'private')) { 
+            %>
+                    <%- render('class.ejs', {tree: tree, item: tree.findNodeByClassName(currentClass)}) %>
             <% } else { %>
                 <%- render('index.ejs', {}) %>
             <% } %>
